log.txt
tomersamara # Mon May  1 09:54:02 IDT 2017
In file included from main_aux.cpp:1:0:
main_aux.cpp: In function 'int* best_indexes(SPPoint*, KDTreeNode*, SPBPQueue*, int)':
main_aux.cpp:184:54: error: cannot convert 'SPBPQueue* {aka sp_bp_queue_t*}' to 'SPBPQueue** {aka sp_bp_queue_t**}' for argument '2' to 'int kNearestNeighbors(KDTreeNode*, SPBPQueue**, SPPoint*, int)'
  CHECK_RET(kNearestNeighbors(curr, bpq, feature, size),"");
                                                      ^
main_aux.h:55:8: note: in definition of macro 'CHECK_RET'
  if (!(cond)) \
        ^
make: *** [main_aux.o] Error 1
